--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .app-wrapper {
-  margin: 0 auto;
-  display: grid;
-  grid-template-areas: "h h" "n c";
-  grid-template-rows: 40px 1fr;
-  grid-template-columns: 2fr 10fr;
-  /*grid-gap: 10px;*/
-  width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-areas: "h h" "n c";
+    grid-template-rows: 40px 1fr;
+    grid-template-columns: 2fr 10fr;
+    /*grid-gap: 10px;*/
+    width: 100%;
+}
 
+.app-wrapper-content {
+    grid-area: c;
+    background-color: aliceblue;
 }
