--- a/src/component/Navbar/Navbar.module.css
+++ b/src/component/Navbar/Navbar.module.css
@@ -1,19 +1,17 @@
 .nav {
     grid-area: n;
     background-color: white;
+    padding: 20px;
 }
 
-.item {
+.item a {
     color: #3376BC;
-    font-weight: 500;
+    text-decoration: none;
+    font-weight: 400;
 }
 
-.active {
-    color: #3376BC;
+.item a.active {
+    color: red;
     text-decoration: underline;
-    font-weight: 500;
-}
-
-.hover {
-
+    font-weight: 400;
 }
